css/style.css
html, body {
    scroll-behavior: smooth;
    margin: 0;
    margin-top: 0;
    padding: 0;
    font-family: "Montserrat", sans-serif;
    font-size: 16px;
    font-weight: 600;
    color: #5C5753;
    background-image: url('../images/grainyimage.jpg');
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    overflow-x: hidden;
    overflow-y: auto;
    min-height: 100vh;
}

.hidden {
    display: none !important;
}

/*TOP NAVBAR*/
.header {
    padding: 20px;
    top: 0;
    position: fixed;
    width: 100%;
    z-index: 1000;
    background-color: transparent; /* Initial background */
    transition: background-color 0.3s ease, height 0.5s ease-in-out;
    height: 0;
}

.topbar {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

.topbar a {
    color: #5C5753;
    text-decoration: none;
    font-size: 24px;
    letter-spacing: 3px;
    display: flex;
    align-items: center;
}

.topbar a.active {
    display: flex;
    align-items: center;
    position: absolute;
    left: 100px;
}

.topbar .logo {
    width: 50px;
    height: auto;
    margin-right: 10px;
    display: inline-block;
}

nav {
    display: flex;
    gap: 20px;
}

.nav-button {
    padding: 10px 20px;
    border-radius: 30px;
    transition: background 0.3s;
}

.nav-button:hover {
    background: rgba(0, 0, 0, 0.1);
}

.header.scrolled {
    background-color: white;
    height: 100px;
}

/*HOME SECTION*/
/* BUTTON*/
.button {
    position: absolute;
    left: 170px;
    bottom: -120px;
    background-color: #3a7444;
    color: white;
    padding: 8px 20px;
    font-size: 1.8rem;
    border-radius: 10px;
    transition: all 0.3s ease;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
}

.button:hover {
    transform: scale(1.05);
}

.info-message {
    margin-top: 10px;
    font-size: 1rem;
    color: #333333;
    line-height: 1.4;
}

.home {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    position: relative;
    text-align: center;
    padding: 50px;
    padding: 0;
    overflow: hidden;
    z-index: 1;
}

.home::before {
    content: "";
    position: absolute;
    top: 0;
    width: 100%;
    min-height: 870px; /* Covers 70% of the section */
    background: rgba(156, 113, 56, 0.2); /* Black with 70% opacity */
    z-index: -1; /* Ensures it stays behind content */
}

.home-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1800px;
    position: absolute;
    top: 200px;
    transform: none;
}

.home-text {
    max-width: 50%;
    min-width: 910px;
    position: relative;
    padding: 20px;
}

.home-text h1 {
    font-size: 4rem;
    letter-spacing: 10px;
    color: #3a7444;
}

.home-text p {
    font-size: 1.3rem;
    margin: 30px 150px;
    text-align: left;
}

.home-text p a {
    color: inherit;
    text-decoration: none;
}

.home-text p a:hover {
    opacity: 0.7;
}

.home-text p a:hover::after {
    width: 100%;
}

.home-logo {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.home-logo img {
    max-width: 100%;
    height: auto;
}

.scroll-arrow {
    position: absolute;
    bottom: 0px;
    color: black;
    transition: opacity 0.5s ease;
}

.material-icons.arrow-down {
    font-size: 5rem;
    animation: bounce 3s ease-in-out infinite;
}

/* Bounce animation */
@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0); 
    }
    40% {
        transform: translateY(10px); 
    }
    60% {
        transform: translateY(5px);
    }
}

/*WELCOME SECTION*/
.welcome {
    padding: 40px 20px;
    text-align: center;
}

.welcome h2 {
    font-size: 3rem;
    margin-bottom: 20px;
    font-weight: 300;
}

.welcome p {
    font-size: 1.3rem; /* Font size for the paragraphs */
    margin: 120px 0; /* Margin for spacing */
    max-width: 600px; /* Set a max width to control line breaks */
    line-height: 1.5; /* Adjust line height for readability */
    margin-left: auto; /* Center align */
    margin-right: auto; /* Center align */
}

.welcome p a {
    color: inherit;
    text-decoration: none;
}

.welcome p a:hover {
    opacity: 0.7;
}

.welcome .odd {
    text-align: left;
    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
    opacity: 0;
}

.welcome .even {
    text-align: right;
    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
    opacity: 0;
}


.info-link {
    display: inline-flex;
    align-items: center;
    cursor: pointer;
    color: #5C5753;
    text-decoration: none;
    transform: translateX(-230px);
}

.link-text {
    font-size: 1.3rem;
    text-decoration: underline;
}

.arrow {
    margin-left: 20px;
    transition: transform 0.3s ease;
}

.info-link:hover .arrow {
    transform: translateX(5px);
}

/*SOKNADSKRITERIER*/
.soknadskriterier {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 100px 20px;
    text-align: center;
}
.soknadskriterier h2 {
    font-size: 3.5rem;
    letter-spacing: 10px;
}
.soknadskriterier p {
    font-size: 1.3rem;
    margin: 50px 50px;
    text-align: left;
}

.criteria-container {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 20px;
}

.criteria-box {
    background: #dda53b2f;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    max-width: 300px;
    text-align: center;
}

.criteria-box span {
    font-size: 40px;
    color: #3a7444;
    display: block;
    margin-bottom: 10px;
}

.deadline-info {
    display: flex;
    justify-content: center;
    margin-top: 30px;
    font-size: 18px;
}

.additional-info {
    margin-top: 0px;
    font-size: 18px; /* Increased size for better readability */
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    line-height: 1.6; /* Better line spacing for readability */
    padding: 20px; /* Adds padding inside the box */
    background-color: #dda53b2f; /* Light background to make the text pop */
    border-radius: 10px; /* Rounded corners */
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
    text-align: left; /* Left-aligned for better readability */
}

/*MER INFORMASJONSSIDE*/
.info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
    text-align: center;
    border-bottom: 2px solid #dda53b2f;
    max-width: 1600px;
    margin: 0 auto;
}

.info h2 {
    font-size: 3rem;
    margin-bottom: 20px;
    font-weight: 300;
}

.criteria-list {
    display: flex;
    flex-direction: wrap;
    justify-content: space-between;
    width: 60%;
    margin: 0 auto;
}


.criterion {
    display: flex;
    flex: 1 1 30%;
    margin: 10px;
    padding: 20px;
    border: 1px solid #cfac84;
    border-radius: 5px;
    background-color: #dda53b2f;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    align-items: center;
    justify-content: center;
}

.highlight {
    font-weight: bold;
    font-size: 1.2rem;
}

.date-container {
    display: flex;
    justify-content: center;
    margin-top: 40px;
    gap: 100px;
}

.date-item {
    font-size: 1.1rem;
    text-align: center;
    border-bottom: 1px solid #333333;
    line-height: 1.3;
}

.info-text {
    margin-top: 40px;
    max-width: 700px;
    font-size: 1.2rem;
    line-height: 1.5;
    padding: 20px;
    border: 3px solid #e2c7c73f;
    border-radius: 18px;
}

/*CONTACT*/
.contact {
    height: 20vh;
    background-color: rgba(0, 0, 0, 0.1);
    padding-top: 50px;
    padding-bottom: 50px;
    text-align: center;
    position: relative;
    overflow: hidden;
}

.contact h2 {
    font-size: 3rem;
    font-weight: 200;
    margin-bottom: 20px;
}

.contact p {
    font-size: 1.2rem;
    margin: 10px 0;
}

.rows {
    display: flex;
    justify-content: center;
}

.contact .contact-form {
    width: 800px; 
    margin: 0 auto; 
    margin-top: 50px;
}

.form-item {
    padding: 0 15px;
}

.col-6 {
    flex: 0 0 48%;
    max-width: 100%;
}

.contact .col-12 {
    flex: 0 0 100%;
    max-width: 100%;
}

.form-item {
    margin-bottom: 20px;
}

.form-control {
    width: 100%;
    height: 30px;
    border-radius: 25px;
    border: 1px solid var(--bg-gray);
    padding: 10px 15px;
    font-size: 16px;
}

input.form-control {
    outline: none;
}
textarea.form-control {
    height: 140px;
    outline: none;
}

.btn {
    color: #5C5753;
    font-size: 16px;
    font-weight: 600;
    border-radius: 25px;
    white-space: nowrap;
    border: none;
    transition: all 0.3s ease;
}

.btn:hover {
    transform: scale(1.1);
}

.contact .btn {
    height: 50px;
    padding: 0 50px;
}


/*TILDELINGER*/
.tildelinger {
    padding: 100px 0px;
    text-align: center;
}

.tildelinger h1 {
    font-size: 3.5rem;
    margin-bottom: 40px;
    letter-spacing: 10px;
}

.tildelinger-container {
    display: flex;
    max-width: 1400px;
    margin: 0 auto;
    align-items: flex-start;
    justify-content: flex-start;
    padding: 20px;
    padding-bottom: 50px;
    margin-bottom: 40px;
}

.tildelinger-image {
    flex: 1;
    max-width: 30%;
    height: auto;
    border-radius: 8px;
    margin-right: 50px;
    align-self: center;
}

.tildelinger-text {
    flex: 2;
    line-height: 1.6;
    width: 100%;
}

.tildelinger-text h2 {
    font-size: 2.5rem;
    margin-bottom: 20px;
    font-weight: 100;
    letter-spacing: 3px;
    text-align: left;
}

.tildelinger-text p {
    font-size: 1.3rem;
    margin-bottom: 40px;
    text-align:left
}

.odd {
    text-align: left;
}

.even {
    text-align: right;
    margin-left: 150px;
}

.tildelinger-text a {
    color: #5C5753;
    text-decoration: none;
    font-weight: bold;
}
.tildelinger-text a:hover {
    text-decoration: underline;
}

.reverse .tildelinger-image{
    margin-left: 50px;
    margin-right: 0;
}

.reverse .tildelinger-text {
    text-align: right;
}

.reverse .odd {
    text-align: left;
}

.reverse .even {
    text-align: right;
    margin-left: 150px;
    margin-right: 50px;
}

/*RESPONSIVE FOR TABLET AND MOBILE*/
/* Responsive for Header */
@media (max-width: 768px) {
    .topbar a {
        font-size: 18px;
    }
}

/* Responsive for Home Section */
@media (max-width: 768px) {
    .home h1 {
        font-size: 3rem;
        letter-spacing: 5px;
    }
}

/* Responsive for Welcome Section */
@media (max-width: 768px) {
    .welcome h2 {
        font-size: 2rem;
    }

    .welcome p {
        font-size: 1rem;
        margin: 40px 0;
    }
}

/* Responsive for Contact Section */
@media (max-width: 768px) {
    .contact h2 {
        font-size: 2rem;
    }
    
    .contact .contact-form {
        width: 100%;
    }

    .form-control {
        height: 40px;
        font-size: 14px;
    }
}

/* Responsive for Tildelinger Section */
@media (max-width: 768px) {
    .tildelinger-container {
        flex-direction: row;
        align-items: flex-start;
    }

    .tildelinger-image {
        display: none;
    }
}

/* General Responsive Styles */
@media (max-width: 768px) {
    .date-container {
        flex-direction: column;
        gap: 20px;
    }
    
    .button-container .button {
        font-size: 1rem;
    }
}

@media (max-width: 768px) {
    .info-link {
        transform: none;
    }
}

